--- a/Solver/Info.plist
+++ b/Solver/Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>EquationSolver</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.geteasysolution.$(PRODUCT_NAME)</string>
+	<string>com.geteasysolution.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>equationsolver</string>
+	<string>EquationSolver</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
