--- a/Solver/Info.plist
+++ b/Solver/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>EquationSolver</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.geteasysolution.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.geteasysolution.equationsolver</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
